fix: remove horizontal scrollbar for firefox

--- a/src/pages/home/index.module.css
+++ b/src/pages/home/index.module.css
@@ -51,7 +51,7 @@
 }
 
 .projects {
-  @apply w-auto h-screen overflow-y-auto;
+  @apply w-auto h-screen overflow-x-hidden overflow-y-auto;
   @apply flex flex-col gap-10 sm:py-[3.75rem] py-12 pr-4 z-20;
 
   &-title {
